@@ -1,5 +1,12 @@
 2005-01-06  Jorn Baayen  <jbaayen@gnome.org>
 
+	* src/Muine.cs:
+	* src/PlaylistWindow.cs:
+
+	Return 1 on error.
+
+2005-01-06  Jorn Baayen  <jbaayen@gnome.org>
+
 	* DBusLib/Makefile.am:
 	* PluginLib/Makefile.am:
 	* configure.in:
